objects/ACP_Oppty_TAM_Report__c.object
<CustomObject>
    <fields>
        <fullName>ACP_Won_DISTRIBUTOR2__c</fullName>
        <description>To store Distributor with an empty value for Won report for Channel BU</description>
        <label>DISTRIBUTOR2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Won_DISTRIBUTOR__c</fullName>
        <description>To store Distributor for Won report for Channel BU</description>
        <label>DISTRIBUTOR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None-Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Date2__c</fullName>
        <description>To store Date for Won report for Channel BU</description>
        <label>Date2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Won_Date__c</fullName>
        <description>To store Date for L12MWon report</description>
        <label>Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Won_Lost_Date__c</fullName>
        <description>To store Lost date for Won report</description>
        <label>Lost Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Won_MED_Portfolio__c</fullName>
        <description>To store MED Portfolio values for Won report</description>
        <label>MED Portfolio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Won_Opp_Group__c</fullName>
        <description>To store Won Opportunity Group</description>
        <label>Opportunity Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Opp_Record_Type__c</fullName>
        <description>To store Opportunity Record Type for Won report[this field Not in Use, created multi picklist as Channel BU has multiple values]</description>
        <label>Opp Rec Ty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Oppty_Rec_Type__c</fullName>
        <description>To store Opportunity Record Type for Won report</description>
        <label>Opportunity Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Part_Confidence__c</fullName>
        <description>To store Part Confidence for Won report for channel BU</description>
        <label>Part Confidence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Won_Phase__c</fullName>
        <description>To store Won Phase</description>
        <label>Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won - Open</fullName>
                </value>
                <value>
                    <fullName>Won - Closed</fullName>
                </value>
                <value>
                    <fullName>Won/Qualified</fullName>
                </value>
                <value>
                    <fullName>Won/Qualified/G3 Approved</fullName>
                </value>
                <value>
                    <fullName>Order Received or Mass Production</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Process_Status__c</fullName>
        <description>To store process status for L12MWon report</description>
        <label>Process Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-prod</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Ramp-down</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Type__c</fullName>
        <description>To store Type for Won Report for Channel BU</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer existing Business</fullName>
                </value>
                <value>
                    <fullName>Defend existing Business</fullName>
                </value>
                <value>
                    <fullName>Stocking Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Won_Date__c</fullName>
        <description>To store Won Date</description>
        <label>Won Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_X5Y_Pipeline__c</fullName>
        <description>Created for Opportunity TAM report.</description>
        <label>5Y Pipeline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Opportunity TAM Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ACP_Conversion__c</columns>
        <columns>ACP_L12_Lost__c</columns>
        <columns>ACP_L12_Won__c</columns>
        <columns>ACP_Pipeline__c</columns>
        <columns>ACP_X5Y_Pipeline__c</columns>
        <columns>ACP_CY_Pipeline__c</columns>
        <columns>ACP_NY_Pipeline__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OT{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity TAM Reports</pluralLabel>
    <recordTypes>
        <fullName>ACP_ADM</fullName>
        <active>true</active>
        <description>AD&amp;M BU</description>
        <label>AD&amp;M</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Appliances</fullName>
        <active>true</active>
        <description>Appliances BU</description>
        <label>Appliances</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Channel</fullName>
        <active>true</active>
        <description>Channel BU</description>
        <label>Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Data_and_Devices</fullName>
        <active>true</active>
        <description>Data &amp; Devices BU</description>
        <label>Data &amp; Devices</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Industrial</fullName>
        <active>true</active>
        <description>Industrial BU</description>
        <label>Industrial</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Medical</fullName>
        <active>true</active>
        <description>Medical BU</description>
        <label>Medical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>